--- a/main.yml
+++ b/main.yml
@@ -31,6 +31,7 @@
     - google-chrome
     - firefox
     - firefox-pentadactyl
+    - boot2docker
     - virtualbox
     - vagrant
     - vagrant-vbguest
