--- a/roles/vagrant/tasks/main.yml
+++ b/roles/vagrant/tasks/main.yml
@@ -1,19 +1,19 @@
 ---
 - name: Download Vagrant
   get_url: >
-    url=http://files.vagrantup.com/packages/a40522f5fabccb9ddabad03d836e120ff5d14093/Vagrant-1.3.5.dmg
-    dest={{ downloads_directory }}/Vagrant-1.3.5.dmg
+    url=https://dl.bintray.com/mitchellh/vagrant/vagrant_1.6.3.dmg
+    dest={{ downloads_directory }}/vagrant_1.6.3.dmg
 
 - name: Mount Vagrant image
   command: >
     chdir={{ downloads_directory }}
-    hdiutil attach Vagrant-1.3.5.dmg
+    hdiutil attach vagrant_1.6.3.dmg
     creates=/Volumes/Vagrant
 
 - name: Install Vagrant
   command: >
     installer -package /Volumes/Vagrant/Vagrant.pkg -target /
-    creates=/Applications/Vagrant.app
+    creates=/Applications/Vagrant
   sudo: yes
 
 - name: Unmount Vagrant image
