--- a/roles/vagrant-vbguest/tasks/main.yml
+++ b/roles/vagrant-vbguest/tasks/main.yml
@@ -1,2 +1,2 @@
 - name: Install the vagrant-vbguest Vagrant plugin
-  command: vagrant plugin install --plugin-source https://rubygems.org --plugin-prerelease vagrant-vbguest
+  command: vagrant plugin install vagrant-vbguest
