--- a/main.yml
+++ b/main.yml
@@ -34,7 +34,9 @@
     - boot2docker
     - vagrant
     - vagrant-vbguest
+    - bundler
     - tmuxinator
+    - heroku
     - powerline
     - oh-my-zsh
     - zsh
@@ -60,6 +62,5 @@
     - the-silver-searcher
     - vault
     - jshint
-    - bundler
     - dotfiles
     - vimfiles
