--- a/roles/jre/tasks/main.yml
+++ b/roles/jre/tasks/main.yml
@@ -2,20 +2,23 @@
 - name: Download JRE
   command: >
     chdir={{ downloads_directory }}
-    curl -L --cookie "gpw_e24=http%3A%2F%2Fwww.oracle.com%2F" http://download.oracle.com/otn-pub/java/jdk/7u45-b18/jre-7u45-macosx-x64.dmg -o jre-7u45-macosx-x64.dmg
-    creates={{ downloads_directory }}/jre-7u45-macosx-x64.dmg
+    curl -L --cookie "gpw_e24=http%3A%2F%2Fwww.oracle.com%2Ftechnetwork%2Fjava%2Fjavase%2Fdownloads%2Fjre8-downloads-2133155.html; oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/8u5-b13/jre-8u5-macosx-x64.dmg -o jre-8u5-macosx-x64.dmg
+    creates={{ downloads_directory }}/jre-8u5-macosx-x64.dmg
+
+- shell: java -version 2>&1
+  register: java_version
 
 - name: Mount JRE image
   command: >
     chdir={{ downloads_directory }}
-    hdiutil attach jre-7u45-macosx-x64.dmg
-    creates=/Volumes/Java\ 7\ Update\ 45
+    hdiutil attach jre-8u5-macosx-x64.dmg
+    creates=/Volumes/Java\ 8\ Update\ 05
 
 - name: Install JRE
   command: >
-    installer -package /Volumes/Java\ 7\ Update\ 45/Java\ 7\ Update\ 45.pkg -target /
-    creates=/Library/Application\ Support/Oracle/Java
+    installer -package /Volumes/Java\ 8\ Update\ 05/Java\ 8\ Update\ 05.pkg -target /
   sudo: yes
+  when: java_version.stdout.find('java version "1.8.0_05"') == -1
 
 - name: Unmount JRE image
-  command: hdiutil detach /Volumes/Java\ 7\ Update\ 45
+  command: hdiutil detach /Volumes/Java\ 8\ Update\ 05
