Install tmux-switch-session.

--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,3 +1,9 @@
 ---
 - name: Install tmux
   homebrew: name=tmux state=present
+
+- name: Install tmux-switch-session
+  get_url: >
+    url=https://raw.githubusercontent.com/mislav/dotfiles/master/bin/tmux-switch-session
+    dest=/usr/local/bin/tmux-switch-session
+    mode=0755
