Revert "Boot2Docker already installs VirtualBox."
This reverts commit 955f417f8462f566363d9aac3e2b1bee838bbc20.

--- a/main.yml
+++ b/main.yml
@@ -54,6 +54,7 @@
     - firefox-pentadactyl
     - firefox-adblock-plus
     - boot2docker
+    - virtualbox
     - vagrant
     - vagrant-vbguest
     - wkhtmltopdf
