--- a/roles/r/tasks/main.yml
+++ b/roles/r/tasks/main.yml
@@ -1,12 +1,11 @@
 ---
 - name: Download R
   get_url: >
-    url=http://cran.r-project.org/bin/macosx/R-3.0.2.pkg
-    dest={{ downloads_directory }}/R-3.0.2.pkg
+    url=https://cran.r-project.org/bin/macosx/R-3.3.1.pkg
+    dest={{ downloads_directory }}/R-3.3.1.pkg
 
 - name: Install R
   command: >
     chdir={{ downloads_directory }}
-    installer -package R-3.0.2.pkg -target /
-    creates=/Applications/R.app
+    installer -package R-3.3.1.pkg -target /
   sudo: yes
