--- a/roles/lua/tasks/main.yml
+++ b/roles/lua/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
 - name: Download lua
   get_url:
-    url=http://www.lua.org/ftp/lua-5.2.3.tar.gz
-    dest={{ downloads_directory }}/lua-5.2.3.tar.gz
+    url=http://www.lua.org/ftp/lua-5.3.2.tar.gz
+    dest={{ downloads_directory }}/lua-5.3.2.tar.gz
 
 - name: Extract lua
   unarchive:
-    src={{ downloads_directory }}/lua-5.2.3.tar.gz
+    src={{ downloads_directory }}/lua-5.3.2.tar.gz
     dest={{ downloads_directory }}
-    creates={{ downloads_directory }}/lua-5.2.3
+    creates={{ downloads_directory }}/lua-5.3.2
 
 - name: Build and install lua
   shell: >
-    chdir={{ downloads_directory }}/lua-5.2.3
+    chdir={{ downloads_directory }}/lua-5.3.2
     make macosx install INSTALL_TOP=/usr
-  sudo: yes
+  become_user: root
