--- a/roles/reattach-to-user-namespace/tasks/main.yml
+++ b/roles/reattach-to-user-namespace/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: Install reattach-to-user-namespace
-  homebrew: name=reattach-to-user-namespace state=present
+  homebrew: name=reattach-to-user-namespace state=latest
