--- a/roles/chefdk/tasks/main.yml
+++ b/roles/chefdk/tasks/main.yml
@@ -1,20 +1,21 @@
 ---
 - name: Download the Chef Development Kit
   get_url: >
-    url=https://opscode-omnibus-packages.s3.amazonaws.com/mac_os_x/10.8/x86_64/chefdk-0.3.5-1.dmg
-    dest={{ downloads_directory }}/chefdk-0.3.5-1.dmg
+    url=https://packages.chef.io/stable/mac_os_x/10.11/chefdk-0.10.0-1.dmg
+    validate_certs=False
+    dest={{ downloads_directory }}/chefdk-0.10.0-1.dmg
 
 - name: Mount the Chef Development Kit image
   command: >
     chdir={{ downloads_directory }}
-    hdiutil attach chefdk-0.3.5-1.dmg
-    creates=/Volumes/Chef\ Development\ Kit
+    creates="/Volumes/Chef Development Kit"
+    hdiutil attach chefdk-0.10.0-1.dmg
 
 - name: Install Chef Development Kit
   command: >
-    installer -package /Volumes/Chef\ Development\ Kit/chefdk-0.3.5-1.pkg -target /
+    installer -package /Volumes/Chef\ Development\ Kit/chefdk-0.10.0-1.pkg -target /
     creates=/usr/bin/chef
   sudo: yes
-#
+
 - name: Unmount the Chef Development Kit image
   command: hdiutil detach /Volumes/Chef\ Installer
