--- a/roles/prey/tasks/main.yml
+++ b/roles/prey/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Download Prey
   get_url: >
-    url=https://s3.amazonaws.com/prey-releases/node-client/1.3.8/prey-mac-1.3.8-x64.pkg
-    dest={{ downloads_directory }}/prey-mac-1.3.8-x64.pkg
+    url=https://prey-releases.s3.amazonaws.com/node-client/1.6.3/prey-mac-1.6.3-x86.pkg
+    dest={{ downloads_directory }}/prey-mac-1.6.3-x86.pkg
 
 - name: Install Prey
   shell: >
-    API_KEY=foobar123 installer -package {{ downloads_directory }}/prey-mac-1.3.8-x64.pkg -target /
+    API_KEY=foobar123 installer -package {{ downloads_directory }}/prey-mac-1.6.3-x86.pkg -target /
   sudo: yes
