Move a few roles to use homebrew cask

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,23 +1,8 @@
 ---
-- name: Download Docker
-  get_url: >
-    url=https://download.docker.com/mac/stable/Docker.dmg
-    dest={{ downloads_directory }}/Docker.dmg
-
-- name: Mount the Docker image
-  command: >
-    chdir={{ downloads_directory }}
-    hdiutil attach -nobrowse Docker.dmg
-    creates=/Volumes/Docker
-
 - name: Install Docker
-  command: >
-    cp -R /Volumes/Docker/Docker.app /Applications
-    creates=/Applications/Docker.app
-  become: yes
+  homebrew_cask:
+    name: docker
+    # name: "docker@{{ docker_version }}"
+    state: latest
 
-- name: Unmount the Docker image
-  command: hdiutil detach /Volumes/Docker
-
-- name: Start Docker
-  command: open /Applications/Docker.app
+# TODO: open it if it was just installed for the first time?
