Small fixes and improvements to a bunch of roles

--- a/roles/usr-local-src-directory/tasks/main.yml
+++ b/roles/usr-local-src-directory/tasks/main.yml
@@ -1,7 +1,5 @@
 ---
-- name: Ensure the /usr/local/src directory exists
-  file: >
-    path=/usr/local/src
-    state=directory
-    owner={{ user }}
-  become: yes
+- name: Ensure that the /usr/local/src directory exists
+  file:
+    path: /usr/local/src
+    state: directory
