--- a/roles/ansible-download-directory/tasks/main.yml
+++ b/roles/ansible-download-directory/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure the Ansible downloads directory exists
-  file: >
-    path={{ downloads_directory }}
-    state=directory
+- name: Ensure that the Ansible downloads directory exists
+  file:
+    path: "{{ downloads_directory }}"
+    state: directory
