Cleanup and improve all roles

--- a/roles/awscli/tasks/main.yml
+++ b/roles/awscli/tasks/main.yml
@@ -1,13 +1,12 @@
 - name: Install awscli
   pip:
     name: awscli
-    version: "{{ awscli_version }}"
     extra_args: --user
 
 - name: Ensure ~/.aws directory exists
-  file: >
-    path="{{ home_directory }}/.aws"
-    state=directory
+  file:
+    path: "{{ home_directory }}/.aws"
+    state: directory
 
 - name: Install ~/.aws/credentials
   copy:
