--- a/roles/terminal-notifier/tasks/main.yml
+++ b/roles/terminal-notifier/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: Install terminal-notifier
-  homebrew: name=terminal-notifier state=present
+  homebrew:
+    name: terminal-notifier
+    state: latest
