--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -6,5 +6,11 @@
     - ansible-download-directory
     - usr-local-src-directory
     - passwordless-sudo
-    - python3
+    - role: python3
+      tags: [foundational, programming-languages, bespoke-pkg, python3]
+      vars:
+        # https://www.python.org/ftp/python/
+        python3_version: "3.9.2"
+        python3_macos_version: "10.9" # this is used in the .pkg file name.
+        python3_version_major_minor: "{{ python3_version | regex_replace('^([0-9]+)\\.([0-9]+)(?:\\.[0-9]+)?$', '\\1.\\2') }}"
     - git_pre_commit
