--- a/roles/black/tasks/main.yml
+++ b/roles/black/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - name: Install Black
   command:
-    python3 -m pip install --user "black=={{ black_version }}"
+    python3 -m pip install --user black
