--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,18 +1,5 @@
 ---
-- name: Download Git
-  get_url:
-    url: https://ufpr.dl.sourceforge.net/project/git-osx-installer/{{ git_dmg }}
-    dest: "{{ downloads_directory }}/{{ git_dmg }}"
-
-- name: Mount Git image
-  command: >
-    hdiutil attach -nobrowse {{ downloads_directory }}/{{ git_dmg }}
-    creates="/Volumes/{{ git_volume }}"
-
 - name: Install Git
-  command: >
-    installer -package "/Volumes/{{ git_volume }}/{{ git_pkg }}" -target /
-  become: yes
-
-- name: Unmount Git image
-  command: hdiutil detach "/Volumes/{{ git_volume }}"
+  homebrew:
+    name: git
+    state: latest
