--- a/roles/krew/tasks/main.yml
+++ b/roles/krew/tasks/main.yml
@@ -1,9 +1,10 @@
 ---
 - name: Install krew
-  shell: >-
+  shell: >
     set -x; cd "$(mktemp -d)" &&
-      curl -fsSLO "https://github.com/kubernetes-sigs/krew/releases/download/v0.3.3/krew.{tar.gz,yaml}" &&
+      OS="$(uname | tr '[:upper:]' '[:lower:]')" &&
+      ARCH="$(uname -m | sed -e 's/x86_64/amd64/' -e 's/\(arm\)\(64\)\?.*/\1\2/' -e 's/aarch64$/arm64/')" &&
+      curl -fsSLO "https://github.com/kubernetes-sigs/krew/releases/latest/download/krew.tar.gz" &&
       tar zxvf krew.tar.gz &&
-      KREW=./krew-"$(uname | tr '[:upper:]' '[:lower:]')_amd64" &&
-      "$KREW" install --manifest=krew.yaml --archive=krew.tar.gz &&
-      "$KREW" update
+      KREW=./krew-"${OS}_${ARCH}" &&
+      "${KREW}" install krew
