--- a/roles/ktlint/tasks/main.yml
+++ b/roles/ktlint/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install ktlint
   get_url:
-    url: "https://github.com/pinterest/ktlint/releases/download/{{ ktlint_version }}/ktlint"
+    url: "https://github.com/pinterest/ktlint/releases/latest/download/ktlint"
     mode: 0755
     dest: /usr/local/bin/ktlint
