--- a/roles/node-cljfmt/tasks/main.yml
+++ b/roles/node-cljfmt/tasks/main.yml
@@ -2,5 +2,5 @@
 - name: Install node-cljfmt
   npm:
     name: node-cljfmt
-    version: "{{ node_cljfmt_version }}"
+    state: latest
     global: yes
